# mdesTokenConnect

./: README.md  config.json  config.py  main.py  providers.py  pyproject.toml  requirements.txt
libs/client_encryption/: __init__.py
libs/mastercardapicore/: __init__.py
libs/mastercardapicore/security/: __init__.py
request_examples/: request1-data-encrypted.json  request1-data.json  request1-headers.json  request1-response.json
resources/: MDESTokenConnectMTFClientEnc1679433687206.pem  MDES_Token_Connect-sandbox.p12  mastercard_sandbox_api_key.p12  mastercard_src_system_sandbox.p12  twisto_mc_connect_prod-production.p12
